--- a/research/03_data_transformation.ipynb
+++ b/research/03_data_transformation.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 4,
    "id": "6847c246",
    "metadata": {},
    "outputs": [],
@@ -12,28 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
-   "id": "3ab94a89",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'c:\\\\Users\\\\User\\\\Desktop\\\\3-IDSD\\\\mlops\\\\MLOPS'"
-      ]
-     },
-     "execution_count": 22,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "%pwd"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 5,
    "id": "47fd8e45",
    "metadata": {},
    "outputs": [],
@@ -43,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 6,
    "id": "93f46ede",
    "metadata": {},
    "outputs": [
@@ -53,7 +32,7 @@
        "'C:\\\\Users\\\\User\\\\Desktop\\\\3-IDSD\\\\mlops\\\\MLOPS\\\\MlopsProject'"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -64,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 7,
    "id": "5483253b",
    "metadata": {},
    "outputs": [],
@@ -81,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 8,
    "id": "7f4b28e7",
    "metadata": {},
    "outputs": [],
@@ -92,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 9,
    "id": "4e45242b",
    "metadata": {},
    "outputs": [],
@@ -127,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 15,
    "id": "2ad7784c",
    "metadata": {},
    "outputs": [],
@@ -136,117 +115,142 @@
     "from mlProject import logger\n",
     "from sklearn.model_selection import train_test_split\n",
     "import pandas as pd\n",
-    "import numpy as np"
+    "import numpy as np\n",
+    "from sklearn.preprocessing import LabelEncoder\n",
+    "import joblib"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 16,
    "id": "d5275e39",
    "metadata": {},
    "outputs": [],
    "source": [
+    "class Preprocessor:\n",
+    "    def __init__(self, num_cols, cat_cols, drop_cols=None):\n",
+    "        self.num_cols = num_cols\n",
+    "        self.cat_cols = cat_cols\n",
+    "        self.label_encoders = {}\n",
+    "        self.drop_cols = drop_cols if drop_cols is not None else []\n",
+    "\n",
+    "    def fit_transform(self, X_train):\n",
+    "        X_train = X_train.copy()\n",
+    "        \n",
+    "        # Supprimer les colonnes inutiles\n",
+    "        X_train = X_train.drop(columns=self.drop_cols, errors=\"ignore\")\n",
+    "        self.num_cols = [c for c in self.num_cols if c not in self.drop_cols]\n",
+    "        self.cat_cols = [c for c in self.cat_cols if c not in self.drop_cols]\n",
+    "\n",
+    "        # Numérique : imputation + clipping + outliers\n",
+    "        for col in self.num_cols:\n",
+    "            X_train[col] = X_train[col].fillna(X_train[col].median())\n",
+    "            Q1 = X_train[col].quantile(0.25)\n",
+    "            Q3 = X_train[col].quantile(0.75)\n",
+    "            IQR = Q3 - Q1\n",
+    "            lower = Q1 - 1.5 * IQR\n",
+    "            upper = Q3 + 1.5 * IQR\n",
+    "            X_train[col] = X_train[col].clip(lower, upper)\n",
+    "\n",
+    "        # Catégorique : LabelEncoder\n",
+    "        for col in self.cat_cols:\n",
+    "            le = LabelEncoder()\n",
+    "            X_train[col] = le.fit_transform(X_train[col])\n",
+    "            self.label_encoders[col] = le\n",
+    "        \n",
+    "        return X_train\n",
+    "\n",
+    "    def transform(self, X_test):\n",
+    "        X_test = X_test.copy()\n",
+    "\n",
+    "        # Supprimer les colonnes inutiles\n",
+    "        X_test = X_test.drop(columns=self.drop_cols, errors=\"ignore\")\n",
+    "\n",
+    "        # Numérique : imputation + clipping + outliers\n",
+    "        for col in self.num_cols:\n",
+    "            X_test[col] = X_test[col].fillna(X_test[col].median())\n",
+    "            Q1 = X_test[col].quantile(0.25)\n",
+    "            Q3 = X_test[col].quantile(0.75)\n",
+    "            IQR = Q3 - Q1\n",
+    "            lower = Q1 - 1.5 * IQR\n",
+    "            upper = Q3 + 1.5 * IQR\n",
+    "            X_test[col] = X_test[col].clip(lower, upper)\n",
+    "\n",
+    "        # Catégorique : transformation avec LabelEncoder sauvegardé\n",
+    "        for col in self.cat_cols:\n",
+    "            le = self.label_encoders[col]\n",
+    "            X_test[col] = le.transform(X_test[col])\n",
+    "        \n",
+    "        return X_test\n",
+    "\n",
+    "    def save(self, filepath=\"preprocessor.pkl\"):\n",
+    "        joblib.dump({\n",
+    "            \"num_cols\": self.num_cols,\n",
+    "            \"cat_cols\": self.cat_cols,\n",
+    "            \"label_encoders\": self.label_encoders,\n",
+    "            \"drop_cols\": self.drop_cols\n",
+    "        }, filepath)\n",
+    "        print(f\"Preprocessor sauvegardé dans {filepath} !\")\n",
+    "\n",
     "class DataTransformation:\n",
     "    def __init__(self, config, target: str):\n",
     "        self.config = config\n",
     "        self.target = target\n",
-    "        self.df = pd.read_csv(self.config.data_path)  # Charger le dataset complet\n",
-    "\n",
-    "    def handle_missing_target(self):\n",
-    "        self.df.dropna(subset=[self.target], inplace=True)\n",
-    "        if self.df[self.target].dtype == object:\n",
-    "            self.df[self.target] = self.df[self.target].map({'Yes':1,'No':0})\n",
-    "        return self\n",
-    "\n",
-    "    def fill_missing_values(self):\n",
-    "        mean_cols = ['MinTemp','MaxTemp','Temp9am','Humidity3pm','Pressure9am','Pressure3pm']\n",
-    "        median_cols = ['Rainfall','WindSpeed9am','WindSpeed3pm','Humidity9am','WindGustSpeed','Sunshine']\n",
-    "        cat_cols = ['WindGustDir', 'WindDir9am', 'WindDir3pm','Location']\n",
-    "\n",
-    "        for col in mean_cols:\n",
-    "            if col in self.df.columns: \n",
-    "                self.df[col] = self.df[col].fillna(self.df[col].mean())\n",
-    "        for col in median_cols:\n",
-    "            if col in self.df.columns: \n",
-    "                self.df[col] = self.df[col].fillna(self.df[col].median())\n",
-    "        for col in cat_cols:\n",
-    "            if col in self.df.columns: \n",
-    "                self.df[col] = self.df[col].fillna(self.df[col].mode()[0])\n",
-    "\n",
-    "        if 'RainToday' in self.df.columns:\n",
-    "            self.df['RainToday'] = self.df['RainToday'].map({'Yes':1,'No':0}).fillna(0)\n",
-    "        return self\n",
-    "\n",
-    "\n",
-    "    def log_transform(self):\n",
-    "        skewed_cols = ['Rainfall','WindGustSpeed','Sunshine','RISK_MM']\n",
-    "        for col in skewed_cols:\n",
-    "            if col in self.df.columns: self.df[col] = np.log1p(self.df[col])\n",
-    "        return self\n",
-    "\n",
-    "    def handle_outliers(self):\n",
-    "        cols = ['Rainfall','WindGustSpeed','RISK_MM']\n",
-    "        for col in cols:\n",
-    "            if col in self.df.columns:\n",
-    "                upper = self.df[col].quantile(0.99)\n",
-    "                self.df[col] = np.clip(self.df[col], None, upper)\n",
-    "        return self\n",
-    "\n",
-    "    def fix_inconsistencies(self):\n",
-    "        if 'MinTemp' in self.df.columns and 'MaxTemp' in self.df.columns:\n",
-    "            invalid = self.df['MinTemp'] > self.df['MaxTemp']\n",
-    "            self.df.loc[invalid, ['MinTemp','MaxTemp']] = self.df.loc[invalid, ['MaxTemp','MinTemp']].values\n",
-    "        if 'RainToday' in self.df.columns:\n",
-    "            self.df.loc[(self.df['Rainfall']>0) & (self.df['RainToday']==0), 'RainToday'] = 1\n",
-    "        return self\n",
-    "\n",
-    "    def drop_unnecessary_columns(self):\n",
-    "        drop_cols = ['RISK_MM','Evaporation','Cloud9am','Cloud3pm','Temp3pm']\n",
-    "        for col in drop_cols:\n",
-    "            if col in self.df.columns: self.df.drop(columns=[col], inplace=True)\n",
-    "        return self\n",
-    "\n",
-    "    def encode_categorical(self):\n",
-    "        cat_features = ['Location','WindGustDir', 'WindDir9am', 'WindDir3pm']\n",
-    "        for col in cat_features:\n",
-    "            if col in self.df.columns: \n",
-    "                self.df = pd.get_dummies(self.df, columns=[col], drop_first=True)\n",
-    "        return self\n",
-    "\n",
-    "    def extract_weekday(self):\n",
-    "        if 'Date' in self.df.columns:\n",
-    "            self.df['Date'] = pd.to_datetime(self.df['Date'])\n",
-    "            self.df['Weekday'] = self.df['Date'].dt.weekday\n",
-    "            self.df.drop(columns='Date', inplace=True)\n",
-    "        return self\n",
+    "        self.df = pd.read_csv(self.config.data_path)\n",
     "\n",
     "    def transform_and_split(self, test_size=0.20, random_state=42):\n",
-    "        # Applique toutes les transformations\n",
-    "        self.handle_missing_target()\\\n",
-    "            .fill_missing_values()\\\n",
-    "            .log_transform()\\\n",
-    "            .handle_outliers()\\\n",
-    "            .fix_inconsistencies()\\\n",
-    "            .drop_unnecessary_columns()\\\n",
-    "            .encode_categorical()\\\n",
-    "            .extract_weekday()\n",
+    "        # Colonnes numériques et catégoriques\n",
+    "        num_cols = [\n",
+    "            \"Age\", \"Session_Duration_Avg\", \"Pages_Per_Session\", \"Wishlist_Items\",\n",
+    "            \"Days_Since_Last_Purchase\", \"Discount_Usage_Rate\", \"Returns_Rate\",\n",
+    "            \"Email_Open_Rate\", \"Customer_Service_Calls\", \"Product_Reviews_Written\",\n",
+    "            \"Social_Media_Engagement_Score\", \"Mobile_App_Usage\", \n",
+    "            \"Payment_Method_Diversity\", \"Credit_Balance\"\n",
+    "        ]\n",
+    "        cat_cols = [\"Gender\", \"Country\", \"City\", \"Signup_Quarter\"]\n",
+    "        drop_cols = [\"Gender\", \"Signup_Quarter\", \"Country\"]  # colonnes à supprimer\n",
+    "        # Mettre à jour cat_cols après drop\n",
+    "        cat_cols = [c for c in cat_cols if c not in drop_cols]\n",
+    "\n",
+    "        # Split features/target\n",
+    "        X = self.df.drop(columns=[self.target])\n",
+    "        y = self.df[self.target]\n",
     "\n",
     "        # Split train/test\n",
-    "        train, test = train_test_split(self.df, test_size=test_size, random_state=random_state)\n",
+    "        X_train, X_test, y_train, y_test = train_test_split(\n",
+    "            X, y, test_size=test_size, random_state=random_state, stratify=y\n",
+    "        )\n",
     "\n",
-    "        # Sauvegarde\n",
+    "        # Sauvegarder l'ordre des features\n",
+    "        FEATURES = X_train.columns.tolist()\n",
     "        os.makedirs(self.config.root_dir, exist_ok=True)\n",
-    "        train.to_csv(os.path.join(self.config.root_dir, \"train.csv\"), index=False)\n",
-    "        test.to_csv(os.path.join(self.config.root_dir, \"test.csv\"), index=False)\n",
+    "        joblib.dump(FEATURES, os.path.join(self.config.root_dir, \"feature_order.pkl\"))\n",
+    "\n",
+    "        # Preprocessing\n",
+    "        preprocessor = Preprocessor(num_cols, cat_cols, drop_cols=drop_cols)\n",
+    "        X_train_prep = preprocessor.fit_transform(X_train)\n",
+    "        X_test_prep = preprocessor.transform(X_test)\n",
+    "        preprocessor.save(os.path.join(self.config.root_dir, \"preprocessor.pkl\"))\n",
+    "\n",
+    "        # Ajouter la target correctement\n",
+    "        X_train_prep = X_train_prep.copy()\n",
+    "        X_test_prep = X_test_prep.copy()\n",
+    "        X_train_prep[self.target] = y_train.values\n",
+    "        X_test_prep[self.target] = y_test.values\n",
+    "\n",
+    "        # Sauvegarder CSV\n",
+    "        X_train_prep.to_csv(os.path.join(self.config.root_dir, \"train.csv\"), index=False)\n",
+    "        X_test_prep.to_csv(os.path.join(self.config.root_dir, \"test.csv\"), index=False)\n",
     "\n",
     "        logger.info(\"Data transformed and split into training and test sets\")\n",
-    "        logger.info(f\"Train shape: {train.shape}, Test shape: {test.shape}\")\n",
-    "        print(f\"Train shape: {train.shape}, Test shape: {test.shape}\")\n"
+    "        print(f\"Train shape: {X_train_prep.shape}, Test shape: {X_test_prep.shape}\")\n",
+    "\n",
+    "        return X_train_prep, X_test_prep, y_train, y_test\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 17,
    "id": "f4046e4a",
    "metadata": {},
    "outputs": [
@@ -254,14 +258,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[2025-12-17 20:46:22,096: INFO: common: yaml file: config\\config.yaml loaded successfully]\n",
-      "[2025-12-17 20:46:22,097: INFO: common: yaml file: params.yaml loaded successfully]\n",
-      "[2025-12-17 20:46:22,099: INFO: common: yaml file: schema.yaml loaded successfully]\n",
-      "[2025-12-17 20:46:22,099: INFO: common: created directory at: artifacts]\n",
-      "[2025-12-17 20:46:22,101: INFO: common: created directory at: artifacts/data_transformation]\n",
-      "[2025-12-17 20:46:24,963: INFO: 316921444: Data transformed and split into training and test sets]\n",
-      "[2025-12-17 20:46:24,963: INFO: 316921444: Train shape: (113754, 108), Test shape: (28439, 108)]\n",
-      "Train shape: (113754, 108), Test shape: (28439, 108)\n"
+      "[2025-12-24 20:02:59,943: INFO: common: yaml file: config\\config.yaml loaded successfully]\n",
+      "[2025-12-24 20:02:59,944: INFO: common: yaml file: params.yaml loaded successfully]\n",
+      "[2025-12-24 20:02:59,947: INFO: common: yaml file: schema.yaml loaded successfully]\n",
+      "[2025-12-24 20:02:59,948: INFO: common: created directory at: artifacts]\n",
+      "[2025-12-24 20:02:59,949: INFO: common: created directory at: artifacts/data_transformation]\n",
+      "Preprocessor sauvegardé dans artifacts/data_transformation\\preprocessor.pkl !\n",
+      "[2025-12-24 20:03:00,406: INFO: 3851889913: Data transformed and split into training and test sets]\n",
+      "Train shape: (40000, 22), Test shape: (10000, 22)\n"
      ]
     }
    ],
@@ -270,7 +274,7 @@
     "    config = ConfigurationManager()\n",
     "    data_transformation_config = config.get_data_transformation_config()\n",
     "    \n",
-    "    target_column = \"RainTomorrow\"\n",
+    "    target_column = \"Churned\"\n",
     "    data_transformation = DataTransformation(config=data_transformation_config, target=target_column)\n",
     "    \n",
     "    data_transformation.transform_and_split()\n",
