--- a/research/04_model_trainer.ipynb
+++ b/research/04_model_trainer.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 1,
    "id": "162b18fe",
    "metadata": {},
    "outputs": [],
@@ -12,28 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
-   "id": "034b7588",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'C:\\\\Users\\\\User\\\\Desktop\\\\3-IDSD\\\\mlops\\\\MLOPS\\\\MlopsProject'"
-      ]
-     },
-     "execution_count": 70,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "%pwd"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 3,
    "id": "77f70ff9",
    "metadata": {},
    "outputs": [],
@@ -43,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 4,
    "id": "c084c39c",
    "metadata": {},
    "outputs": [
@@ -53,7 +32,7 @@
        "'C:\\\\Users\\\\User\\\\Desktop\\\\3-IDSD\\\\mlops\\\\MLOPS\\\\MlopsProject'"
       ]
      },
-     "execution_count": 72,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -64,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 5,
    "id": "bb303cfb",
    "metadata": {},
    "outputs": [],
@@ -84,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 6,
    "id": "7500c6e8",
    "metadata": {},
    "outputs": [],
@@ -95,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 7,
    "id": "d17cf8b0",
    "metadata": {},
    "outputs": [],
@@ -140,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 8,
    "id": "83e8efdc",
    "metadata": {},
    "outputs": [],
@@ -160,15 +139,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "eb273737",
    "metadata": {},
    "outputs": [],
    "source": [
+    "class SMOTEHandler:\n",
+    "    def __init__(self, random_state=42):\n",
+    "        self.random_state = random_state\n",
+    "    \n",
+    "    def fit_resample(self, X_train, y_train):\n",
+    "        smote = SMOTE(random_state=self.random_state)\n",
+    "        X_resampled, y_resampled = smote.fit_resample(X_train, y_train)\n",
+    "        return X_resampled, y_resampled\n",
+    "\n",
+    "\n",
     "class ModelTrainer:\n",
     "    def __init__(self, config: ModelTrainerConfig, all_params: dict):\n",
     "        self.config = config\n",
     "        self.all_params = all_params  # dictionnaire contenant les hyperparamètres pour chaque modèle\n",
+    "        self.smote_handler = SMOTEHandler(random_state=42)  # ajout du handler SMOTE\n",
     "\n",
     "    def train(self):\n",
     "        # 1️⃣ Charger les données\n",
@@ -182,9 +172,8 @@
     "        X_test = test_data.drop([self.config.target_column], axis=1)\n",
     "        y_test = test_data[self.config.target_column]\n",
     "\n",
-    "        # 3️⃣ Appliquer SMOTE uniquement sur le train\n",
-    "        smote = SMOTE(random_state=42)\n",
-    "        X_train_res, y_train_res = smote.fit_resample(X_train, y_train)\n",
+    "        # 3️⃣ Appliquer SMOTE via SMOTEHandler uniquement sur le train\n",
+    "        X_train_res, y_train_res = self.smote_handler.fit_resample(X_train, y_train)\n",
     "\n",
     "        logger.info(\"Target distribution AFTER SMOTE:\")\n",
     "        logger.info(pd.Series(y_train_res).value_counts().to_string())\n",
@@ -226,7 +215,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 10,
    "id": "a0230cf6",
    "metadata": {},
    "outputs": [
@@ -234,48 +223,38 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[2025-12-20 14:39:55,395: INFO: common: yaml file: config\\config.yaml loaded successfully]\n",
-      "[2025-12-20 14:39:55,397: INFO: common: yaml file: params.yaml loaded successfully]\n",
-      "[2025-12-20 14:39:55,398: INFO: common: yaml file: schema.yaml loaded successfully]\n",
-      "[2025-12-20 14:39:55,398: INFO: common: created directory at: artifacts]\n",
-      "[2025-12-20 14:39:55,398: INFO: common: created directory at: artifacts/model_trainer]\n",
-      "[2025-12-20 14:39:57,038: INFO: 405343348: Target distribution AFTER SMOTE:]\n",
-      "[2025-12-20 14:39:57,045: INFO: 405343348: RainTomorrow\n",
-      "0    88218\n",
-      "1    88218]\n",
-      "[2025-12-20 14:39:57,046: INFO: 405343348: Train before SMOTE: (113754, 107)]\n",
-      "[2025-12-20 14:39:57,046: INFO: 405343348: Train after SMOTE: (176436, 107)]\n",
-      "[2025-12-20 14:39:57,049: INFO: 405343348: Training RandomForest...]\n",
-      "[2025-12-20 14:40:06,919: INFO: 405343348: RandomForest saved at artifacts/model_trainer\\RandomForest.pkl]\n",
-      "[2025-12-20 14:40:06,920: INFO: 405343348: Training XGBoost...]\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "c:\\Users\\User\\Desktop\\3-IDSD\\mlops\\MLOPS\\MlopsProject\\base\\Lib\\site-packages\\xgboost\\training.py:199: UserWarning: [14:40:08] WARNING: C:\\actions-runner\\_work\\xgboost\\xgboost\\src\\learner.cc:790: \n",
-      "Parameters: { \"use_label_encoder\" } are not used.\n",
-      "\n",
-      "  bst.update(dtrain, iteration=i, fobj=obj)\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[2025-12-20 14:40:09,447: INFO: 405343348: XGBoost saved at artifacts/model_trainer\\XGBoost.pkl]\n",
-      "[2025-12-20 14:40:09,447: INFO: 405343348: Training LightGBM...]\n",
-      "[LightGBM] [Info] Number of positive: 88218, number of negative: 88218\n",
-      "[LightGBM] [Info] Auto-choosing row-wise multi-threading, the overhead of testing was 0.012249 seconds.\n",
+      "[2025-12-24 20:20:45,797: INFO: common: yaml file: config\\config.yaml loaded successfully]\n",
+      "[2025-12-24 20:20:45,800: INFO: common: yaml file: params.yaml loaded successfully]\n",
+      "[2025-12-24 20:20:45,803: INFO: common: yaml file: schema.yaml loaded successfully]\n",
+      "[2025-12-24 20:20:45,803: INFO: common: created directory at: artifacts]\n",
+      "[2025-12-24 20:20:45,803: INFO: common: created directory at: artifacts/model_trainer]\n",
+      "[2025-12-24 20:20:46,049: INFO: 144711623: Target distribution AFTER SMOTE:]\n",
+      "[2025-12-24 20:20:46,053: INFO: 144711623: Churned\n",
+      "0    28440\n",
+      "1    28440]\n",
+      "[2025-12-24 20:20:46,054: INFO: 144711623: Train before SMOTE: (40000, 21)]\n",
+      "[2025-12-24 20:20:46,054: INFO: 144711623: Train after SMOTE: (56880, 21)]\n",
+      "[2025-12-24 20:20:46,056: INFO: 144711623: Training RandomForest...]\n",
+      "[2025-12-24 20:20:48,462: INFO: 144711623: RandomForest saved at artifacts/model_trainer\\RandomForest.pkl]\n",
+      "[2025-12-24 20:20:48,462: INFO: 144711623: Training XGBoost...]\n",
+      "[2025-12-24 20:20:49,292: INFO: 144711623: XGBoost saved at artifacts/model_trainer\\XGBoost.pkl]\n",
+      "[2025-12-24 20:20:49,292: INFO: 144711623: Training LightGBM...]\n",
+      "[LightGBM] [Info] Number of positive: 28440, number of negative: 28440\n",
+      "[LightGBM] [Info] Auto-choosing row-wise multi-threading, the overhead of testing was 0.001405 seconds.\n",
       "You can set `force_row_wise=true` to remove the overhead.\n",
       "And if memory is not enough, you can set `force_col_wise=true`.\n",
-      "[LightGBM] [Info] Total Bins 3483\n",
-      "[LightGBM] [Info] Number of data points in the train set: 176436, number of used features: 107\n",
+      "[LightGBM] [Info] Total Bins 5133\n",
+      "[LightGBM] [Info] Number of data points in the train set: 56880, number of used features: 21\n",
       "[LightGBM] [Info] [binary:BoostFromScore]: pavg=0.500000 -> initscore=0.000000\n",
-      "[2025-12-20 14:40:12,488: INFO: 405343348: LightGBM saved at artifacts/model_trainer\\LightGBM.pkl]\n",
-      "[2025-12-20 14:40:12,489: INFO: 405343348: Training CatBoost...]\n",
-      "[2025-12-20 14:40:15,576: INFO: 405343348: CatBoost saved at artifacts/model_trainer\\CatBoost.pkl]\n"
+      "[LightGBM] [Warning] No further splits with positive gain, best gain: -inf\n",
+      "[LightGBM] [Warning] No further splits with positive gain, best gain: -inf\n",
+      "[LightGBM] [Warning] No further splits with positive gain, best gain: -inf\n",
+      "[LightGBM] [Warning] No further splits with positive gain, best gain: -inf\n",
+      "[LightGBM] [Warning] No further splits with positive gain, best gain: -inf\n",
+      "[LightGBM] [Warning] No further splits with positive gain, best gain: -inf\n",
+      "[2025-12-24 20:20:51,966: INFO: 144711623: LightGBM saved at artifacts/model_trainer\\LightGBM.pkl]\n",
+      "[2025-12-24 20:20:51,966: INFO: 144711623: Training CatBoost...]\n",
+      "[2025-12-24 20:20:53,512: INFO: 144711623: CatBoost saved at artifacts/model_trainer\\CatBoost.pkl]\n"
      ]
     }
    ],
@@ -292,24 +271,6 @@
     "    model_trainer.train()\n",
     "except Exception as e:\n",
     "    raise e\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 1,
-   "id": "99469159",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "hello\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(\"hello\")"
    ]
   }
  ],
