--- a/research/05_model_evaluation.ipynb
+++ b/research/05_model_evaluation.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "6eba6866",
    "metadata": {},
    "outputs": [],
@@ -12,14 +12,24 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 2,
+   "id": "d2d4f10d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "os.chdir(\"C:/Users/User/Desktop/3-IDSD/mlops/MLOPS/MlopsProject\")"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 3,
-   "id": "a27ab1c6",
+   "id": "48b4adb1",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'c:\\\\Users\\\\User\\\\Desktop\\\\3-IDSD\\\\mlops\\\\MLOPS\\\\MlopsProject\\\\research'"
+       "'C:\\\\Users\\\\User\\\\Desktop\\\\3-IDSD\\\\mlops\\\\MLOPS\\\\MlopsProject'"
       ]
      },
      "execution_count": 3,
@@ -34,37 +44,6 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "d2d4f10d",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "os.chdir(\"C:/Users/User/Desktop/3-IDSD/mlops/MLOPS/MlopsProject\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "id": "48b4adb1",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'C:\\\\Users\\\\User\\\\Desktop\\\\3-IDSD\\\\mlops\\\\MLOPS\\\\MlopsProject'"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "%pwd"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
    "id": "74944183",
    "metadata": {},
    "outputs": [],
@@ -74,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "id": "712b303d",
    "metadata": {},
    "outputs": [],
@@ -86,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 6,
    "id": "3bf6276b",
    "metadata": {},
    "outputs": [],
@@ -107,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 7,
    "id": "a565da06",
    "metadata": {},
    "outputs": [],
@@ -118,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 9,
    "id": "6bb99877",
    "metadata": {},
    "outputs": [],
@@ -160,14 +139,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 13,
    "id": "55ba21f4",
    "metadata": {},
    "outputs": [],
    "source": [
     "import os\n",
     "import pandas as pd\n",
-    "from sklearn.metrics import mean_squared_error, mean_absolute_error, r2_score\n",
+    "from sklearn.metrics import accuracy_score, precision_score, recall_score, f1_score, roc_auc_score\n",
     "from urllib.parse import urlparse\n",
     "import mlflow\n",
     "import mlflow.sklearn\n",
@@ -178,7 +157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 14,
    "id": "096732ff",
    "metadata": {},
    "outputs": [],
@@ -187,14 +166,21 @@
     "    def __init__(self, config: ModelEvaluationConfig):\n",
     "        self.config = config\n",
     "\n",
-    "    def eval_metrics(self, actual, pred):\n",
-    "        rmse = np.sqrt(mean_squared_error(actual, pred))\n",
-    "        mae = mean_absolute_error(actual, pred)\n",
-    "        r2 = r2_score(actual, pred)\n",
-    "        return rmse, mae, r2\n",
+    "    def eval_metrics(self, actual, pred, prob=None):\n",
+    "        \"\"\"\n",
+    "        actual : vraies valeurs\n",
+    "        pred : prédictions binaires\n",
+    "        prob : probabilité pour calcul ROC-AUC (optionnel)\n",
+    "        \"\"\"\n",
+    "        accuracy = accuracy_score(actual, pred)\n",
+    "        precision = precision_score(actual, pred, zero_division=0)\n",
+    "        recall = recall_score(actual, pred, zero_division=0)\n",
+    "        f1 = f1_score(actual, pred, zero_division=0)\n",
+    "        roc_auc = roc_auc_score(actual, prob) if prob is not None else None\n",
+    "\n",
+    "        return accuracy, precision, recall, f1, roc_auc\n",
     "\n",
     "    def log_into_mlflow(self):\n",
-    "\n",
     "        test_data = pd.read_csv(self.config.test_data_path)\n",
     "        test_x = test_data.drop([self.config.target_column], axis=1)\n",
     "        test_y = test_data[self.config.target_column]\n",
@@ -202,9 +188,7 @@
     "        mlflow.set_registry_uri(self.config.mlflow_uri)\n",
     "        tracking_url_type_store = urlparse(mlflow.get_tracking_uri()).scheme\n",
     "\n",
-    "        # 🔁 Boucle sur tous les modèles sauvegardés\n",
     "        for model_file in os.listdir(self.config.model_dir):\n",
-    "\n",
     "            if not model_file.endswith(\".pkl\"):\n",
     "                continue\n",
     "\n",
@@ -216,25 +200,38 @@
     "            model = joblib.load(model_path)\n",
     "\n",
     "            with mlflow.start_run(run_name=model_name):\n",
-    "\n",
+    "                # Prédictions binaires et probabilités si disponibles\n",
     "                predictions = model.predict(test_x)\n",
-    "                rmse, mae, r2 = self.eval_metrics(test_y, predictions)\n",
+    "                probas = model.predict_proba(test_x)[:,1] if hasattr(model, \"predict_proba\") else None\n",
     "\n",
-    "                scores = {\"rmse\": rmse, \"mae\": mae, \"r2\": r2}\n",
+    "                accuracy, precision, recall, f1, roc_auc = self.eval_metrics(test_y, predictions, probas)\n",
+    "\n",
+    "                scores = {\n",
+    "                    \"accuracy\": accuracy,\n",
+    "                    \"precision\": precision,\n",
+    "                    \"recall\": recall,\n",
+    "                    \"f1\": f1,\n",
+    "                    \"roc_auc\": roc_auc\n",
+    "                }\n",
     "\n",
     "                save_json(\n",
     "                    path=Path(os.path.join(self.config.root_dir, f\"{model_name}_metrics.json\")),\n",
     "                    data=scores\n",
     "                )\n",
     "\n",
-    "                # 🔹 Log params DU modèle\n",
-    "                if model_name in self.config.all_params:\n",
+    "                # 🔹 Log params du modèle si existant\n",
+    "                if hasattr(self.config, \"all_params\") and model_name in self.config.all_params:\n",
     "                    mlflow.log_params(self.config.all_params[model_name])\n",
     "\n",
-    "                mlflow.log_metric(\"rmse\", rmse)\n",
-    "                mlflow.log_metric(\"mae\", mae)\n",
-    "                mlflow.log_metric(\"r2\", r2)\n",
+    "                # 🔹 Log metrics\n",
+    "                mlflow.log_metric(\"accuracy\", accuracy)\n",
+    "                mlflow.log_metric(\"precision\", precision)\n",
+    "                mlflow.log_metric(\"recall\", recall)\n",
+    "                mlflow.log_metric(\"f1\", f1)\n",
+    "                if roc_auc is not None:\n",
+    "                    mlflow.log_metric(\"roc_auc\", roc_auc)\n",
     "\n",
+    "                # 🔹 Log modèle\n",
     "                if tracking_url_type_store != \"file\":\n",
     "                    mlflow.sklearn.log_model(\n",
     "                        model,\n",
@@ -247,7 +244,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "id": "1bd46926",
    "metadata": {},
    "outputs": [
@@ -255,13 +252,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[2025-12-20 21:28:07,682: INFO: common: yaml file: config\\config.yaml loaded successfully]\n",
-      "[2025-12-20 21:28:07,684: INFO: common: yaml file: params.yaml loaded successfully]\n",
-      "[2025-12-20 21:28:07,685: INFO: common: yaml file: schema.yaml loaded successfully]\n",
-      "[2025-12-20 21:28:07,686: INFO: common: created directory at: artifacts]\n",
-      "[2025-12-20 21:28:07,687: INFO: common: created directory at: artifacts/model_evaluation]\n",
-      "[2025-12-20 21:28:07,823: INFO: 3998395040: Evaluating model: CatBoost]\n",
-      "[2025-12-20 21:28:08,844: INFO: common: json file saved at: artifacts\\model_evaluation\\CatBoost_metrics.json]\n"
+      "[2025-12-24 20:26:17,974: INFO: common: yaml file: config\\config.yaml loaded successfully]\n",
+      "[2025-12-24 20:26:17,976: INFO: common: yaml file: params.yaml loaded successfully]\n",
+      "[2025-12-24 20:26:17,979: INFO: common: yaml file: schema.yaml loaded successfully]\n",
+      "[2025-12-24 20:26:17,980: INFO: common: created directory at: artifacts]\n",
+      "[2025-12-24 20:26:17,981: INFO: common: created directory at: artifacts/model_evaluation]\n",
+      "[2025-12-24 20:26:18,008: INFO: 3320842624: Evaluating model: CatBoost]\n",
+      "[2025-12-24 20:26:18,292: INFO: common: json file saved at: artifacts\\model_evaluation\\CatBoost_metrics.json]\n"
      ]
     },
     {
@@ -270,34 +267,34 @@
      "text": [
       "c:\\Users\\User\\Desktop\\3-IDSD\\mlops\\MLOPS\\MlopsProject\\base\\Lib\\site-packages\\_distutils_hack\\__init__.py:33: UserWarning: Setuptools is replacing distutils.\n",
       "  warnings.warn(\"Setuptools is replacing distutils.\")\n",
-      "Successfully registered model 'CatBoostModel'.\n",
-      "2025/12/20 21:28:18 INFO mlflow.tracking._model_registry.client: Waiting up to 300 seconds for model version to finish creation.                     Model name: CatBoostModel, version 1\n",
-      "Created version '1' of model 'CatBoostModel'.\n"
+      "Registered model 'CatBoostModel' already exists. Creating a new version of this model...\n",
+      "2025/12/24 20:26:27 INFO mlflow.tracking._model_registry.client: Waiting up to 300 seconds for model version to finish creation.                     Model name: CatBoostModel, version 6\n",
+      "Created version '6' of model 'CatBoostModel'.\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[2025-12-20 21:28:18,784: INFO: 3998395040: Evaluating model: LightGBM]\n",
-      "[2025-12-20 21:28:20,780: INFO: common: json file saved at: artifacts\\model_evaluation\\LightGBM_metrics.json]\n"
+      "[2025-12-24 20:26:27,568: INFO: 3320842624: Evaluating model: LightGBM]\n",
+      "[2025-12-24 20:26:29,297: INFO: common: json file saved at: artifacts\\model_evaluation\\LightGBM_metrics.json]\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Successfully registered model 'LightGBMModel'.\n",
-      "2025/12/20 21:28:29 INFO mlflow.tracking._model_registry.client: Waiting up to 300 seconds for model version to finish creation.                     Model name: LightGBMModel, version 1\n",
-      "Created version '1' of model 'LightGBMModel'.\n"
+      "Registered model 'LightGBMModel' already exists. Creating a new version of this model...\n",
+      "2025/12/24 20:26:42 INFO mlflow.tracking._model_registry.client: Waiting up to 300 seconds for model version to finish creation.                     Model name: LightGBMModel, version 6\n",
+      "Created version '6' of model 'LightGBMModel'.\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[2025-12-20 21:28:29,849: INFO: 3998395040: Evaluating model: RandomForest]\n",
-      "[2025-12-20 21:28:30,984: INFO: common: json file saved at: artifacts\\model_evaluation\\RandomForest_metrics.json]\n"
+      "[2025-12-24 20:26:43,233: INFO: 3320842624: Evaluating model: RandomForest]\n",
+      "[2025-12-24 20:26:44,451: INFO: common: json file saved at: artifacts\\model_evaluation\\RandomForest_metrics.json]\n"
      ]
     },
     {
@@ -305,25 +302,25 @@
      "output_type": "stream",
      "text": [
       "Registered model 'RandomForestModel' already exists. Creating a new version of this model...\n",
-      "2025/12/20 21:51:37 INFO mlflow.tracking._model_registry.client: Waiting up to 300 seconds for model version to finish creation.                     Model name: RandomForestModel, version 2\n",
-      "Created version '2' of model 'RandomForestModel'.\n"
+      "2025/12/24 20:31:22 INFO mlflow.tracking._model_registry.client: Waiting up to 300 seconds for model version to finish creation.                     Model name: RandomForestModel, version 6\n",
+      "Created version '6' of model 'RandomForestModel'.\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[2025-12-20 21:51:38,008: INFO: 3998395040: Evaluating model: XGBoost]\n",
-      "[2025-12-20 21:51:40,030: INFO: common: json file saved at: artifacts\\model_evaluation\\XGBoost_metrics.json]\n"
+      "[2025-12-24 20:31:22,815: INFO: 3320842624: Evaluating model: XGBoost]\n",
+      "[2025-12-24 20:31:23,829: INFO: common: json file saved at: artifacts\\model_evaluation\\XGBoost_metrics.json]\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Successfully registered model 'XGBoostModel'.\n",
-      "2025/12/20 21:51:48 INFO mlflow.tracking._model_registry.client: Waiting up to 300 seconds for model version to finish creation.                     Model name: XGBoostModel, version 1\n",
-      "Created version '1' of model 'XGBoostModel'.\n"
+      "Registered model 'XGBoostModel' already exists. Creating a new version of this model...\n",
+      "2025/12/24 20:31:33 INFO mlflow.tracking._model_registry.client: Waiting up to 300 seconds for model version to finish creation.                     Model name: XGBoostModel, version 5\n",
+      "Created version '5' of model 'XGBoostModel'.\n"
      ]
     }
    ],
@@ -340,20 +337,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "f234218d",
+   "execution_count": 16,
+   "id": "2412b265",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "hhi\n"
+      "MLflow tracking URI: https://dagshub.com/hannamhiri/MlopsProject.mlflow\n"
      ]
     }
    ],
    "source": [
-    "print(\"hhi\")"
+    "import mlflow\n",
+    "print(\"MLflow tracking URI:\", mlflow.get_tracking_uri())\n"
    ]
   }
  ],
