--- a/research/02_data_validation.ipynb
+++ b/research/02_data_validation.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 9,
    "id": "99ba9975",
    "metadata": {},
    "outputs": [],
@@ -12,17 +12,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 10,
    "id": "a386758d",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'C:\\\\Users\\\\User\\\\Desktop\\\\3-IDSD\\\\mlops\\\\MLOPS\\\\MlopsProject'"
+       "'c:\\\\Users\\\\User\\\\Desktop\\\\3-IDSD\\\\mlops\\\\MLOPS\\\\MlopsProject\\\\research'"
       ]
      },
-     "execution_count": 80,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 11,
    "id": "ce758c3a",
    "metadata": {},
    "outputs": [],
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 12,
    "id": "4dc44822",
    "metadata": {},
    "outputs": [
@@ -53,7 +53,7 @@
        "'C:\\\\Users\\\\User\\\\Desktop\\\\3-IDSD\\\\mlops\\\\MLOPS\\\\MlopsProject'"
       ]
      },
-     "execution_count": 82,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 13,
    "id": "a6b41bbe",
    "metadata": {},
    "outputs": [],
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 14,
    "id": "890d3f09",
    "metadata": {},
    "outputs": [
@@ -294,7 +294,7 @@
        "[5 rows x 25 columns]"
       ]
      },
-     "execution_count": 84,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -306,7 +306,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 15,
    "id": "33710b03",
    "metadata": {},
    "outputs": [
@@ -355,7 +355,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 16,
    "id": "91cb26c9",
    "metadata": {},
    "outputs": [
@@ -390,13 +390,35 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 86,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "data.isnull().sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "afe492bd",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(['France', 'UK', 'Canada', 'USA', 'India', 'Japan', 'Germany',\n",
+       "       'Australia'], dtype=object)"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data['Country'].unique()"
    ]
   },
   {
