--- a/research/04_model_trainer.ipynb
+++ b/research/04_model_trainer.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "77f70ff9",
    "metadata": {},
    "outputs": [],
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "c084c39c",
    "metadata": {},
    "outputs": [
@@ -32,7 +32,7 @@
        "'C:\\\\Users\\\\User\\\\Desktop\\\\3-IDSD\\\\mlops\\\\MLOPS\\\\MlopsProject'"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "bb303cfb",
    "metadata": {},
    "outputs": [],
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "7500c6e8",
    "metadata": {},
    "outputs": [],
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "id": "d17cf8b0",
    "metadata": {},
    "outputs": [],
@@ -119,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "id": "83e8efdc",
    "metadata": {},
    "outputs": [],
@@ -139,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "id": "eb273737",
    "metadata": {},
    "outputs": [],
@@ -215,7 +215,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "id": "a0230cf6",
    "metadata": {},
    "outputs": [
@@ -223,26 +223,25 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[2025-12-24 20:20:45,797: INFO: common: yaml file: config\\config.yaml loaded successfully]\n",
-      "[2025-12-24 20:20:45,800: INFO: common: yaml file: params.yaml loaded successfully]\n",
-      "[2025-12-24 20:20:45,803: INFO: common: yaml file: schema.yaml loaded successfully]\n",
-      "[2025-12-24 20:20:45,803: INFO: common: created directory at: artifacts]\n",
-      "[2025-12-24 20:20:45,803: INFO: common: created directory at: artifacts/model_trainer]\n",
-      "[2025-12-24 20:20:46,049: INFO: 144711623: Target distribution AFTER SMOTE:]\n",
-      "[2025-12-24 20:20:46,053: INFO: 144711623: Churned\n",
+      "[2025-12-25 18:57:01,579: INFO: common: yaml file: config\\config.yaml loaded successfully]\n",
+      "[2025-12-25 18:57:01,581: INFO: common: yaml file: params.yaml loaded successfully]\n",
+      "[2025-12-25 18:57:01,585: INFO: common: yaml file: schema.yaml loaded successfully]\n",
+      "[2025-12-25 18:57:01,586: INFO: common: created directory at: artifacts]\n",
+      "[2025-12-25 18:57:01,586: INFO: common: created directory at: artifacts/model_trainer]\n",
+      "[2025-12-25 18:57:01,866: INFO: 144711623: Target distribution AFTER SMOTE:]\n",
+      "[2025-12-25 18:57:01,866: INFO: 144711623: Churned\n",
       "0    28440\n",
       "1    28440]\n",
-      "[2025-12-24 20:20:46,054: INFO: 144711623: Train before SMOTE: (40000, 21)]\n",
-      "[2025-12-24 20:20:46,054: INFO: 144711623: Train after SMOTE: (56880, 21)]\n",
-      "[2025-12-24 20:20:46,056: INFO: 144711623: Training RandomForest...]\n",
-      "[2025-12-24 20:20:48,462: INFO: 144711623: RandomForest saved at artifacts/model_trainer\\RandomForest.pkl]\n",
-      "[2025-12-24 20:20:48,462: INFO: 144711623: Training XGBoost...]\n",
-      "[2025-12-24 20:20:49,292: INFO: 144711623: XGBoost saved at artifacts/model_trainer\\XGBoost.pkl]\n",
-      "[2025-12-24 20:20:49,292: INFO: 144711623: Training LightGBM...]\n",
+      "[2025-12-25 18:57:01,866: INFO: 144711623: Train before SMOTE: (40000, 21)]\n",
+      "[2025-12-25 18:57:01,873: INFO: 144711623: Train after SMOTE: (56880, 21)]\n",
+      "[2025-12-25 18:57:01,873: INFO: 144711623: Training RandomForest...]\n",
+      "[2025-12-25 18:57:04,310: INFO: 144711623: RandomForest saved at artifacts/model_trainer\\RandomForest.pkl]\n",
+      "[2025-12-25 18:57:04,310: INFO: 144711623: Training XGBoost...]\n",
+      "[2025-12-25 18:57:06,418: INFO: 144711623: XGBoost saved at artifacts/model_trainer\\XGBoost.pkl]\n",
+      "[2025-12-25 18:57:06,419: INFO: 144711623: Training LightGBM...]\n",
       "[LightGBM] [Info] Number of positive: 28440, number of negative: 28440\n",
-      "[LightGBM] [Info] Auto-choosing row-wise multi-threading, the overhead of testing was 0.001405 seconds.\n",
-      "You can set `force_row_wise=true` to remove the overhead.\n",
-      "And if memory is not enough, you can set `force_col_wise=true`.\n",
+      "[LightGBM] [Info] Auto-choosing col-wise multi-threading, the overhead of testing was 0.002466 seconds.\n",
+      "You can set `force_col_wise=true` to remove the overhead.\n",
       "[LightGBM] [Info] Total Bins 5133\n",
       "[LightGBM] [Info] Number of data points in the train set: 56880, number of used features: 21\n",
       "[LightGBM] [Info] [binary:BoostFromScore]: pavg=0.500000 -> initscore=0.000000\n",
@@ -252,9 +251,9 @@
       "[LightGBM] [Warning] No further splits with positive gain, best gain: -inf\n",
       "[LightGBM] [Warning] No further splits with positive gain, best gain: -inf\n",
       "[LightGBM] [Warning] No further splits with positive gain, best gain: -inf\n",
-      "[2025-12-24 20:20:51,966: INFO: 144711623: LightGBM saved at artifacts/model_trainer\\LightGBM.pkl]\n",
-      "[2025-12-24 20:20:51,966: INFO: 144711623: Training CatBoost...]\n",
-      "[2025-12-24 20:20:53,512: INFO: 144711623: CatBoost saved at artifacts/model_trainer\\CatBoost.pkl]\n"
+      "[2025-12-25 18:57:08,102: INFO: 144711623: LightGBM saved at artifacts/model_trainer\\LightGBM.pkl]\n",
+      "[2025-12-25 18:57:08,102: INFO: 144711623: Training CatBoost...]\n",
+      "[2025-12-25 18:57:09,843: INFO: 144711623: CatBoost saved at artifacts/model_trainer\\CatBoost.pkl]\n"
      ]
     }
    ],
